<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Car Pool</string>
    <string name="action_settings">Settings</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_date">Selected date cannot be earlier than current date.</string>
    <string name="plus_minus">&#177;</string>
    <string name="mins">mins</string>

    <string name="button_map">Show Map</string>
    <string name="button_list">Show List</string>
    <string name="desc">ImageContentDescription</string>
    <string name="default_username">Username</string>
    <string name="start_name">UCI Campus</string>
    <string name="back_name">Ranch 99</string>
    <string name="start_time">11:00 AM</string>
    <string name="start_time_range">30mins</string>
    <string name="start_time_date">Thu 05/12/2012</string>
    <string name="back_time">16:00 PM</string>
    <string name="back_time_range">45mins</string>
    <string name="back_time_date">Wed 05/13/2014</string>
    <string name="seats_availability">4/5</string>
    <string name="seats_availability_question">4/？</string>
    <string name="driver_status_okay">OK!</string>
    <string name="driver_status_not_yet">\?</string>
    <string name="wanna_join">Join</string>

    <string name="enterEmail">Enter your email</string>
    <string name="enterPassword">Enter your password</string>
    <string name="enterVIPCode">Enter your VIP code</string>
    <string name="enterUsername">Nickname in this app</string>

    <string name="goRegister">Register</string>
    <string name="goLogin">Login</string>
    <string name="goStart">Start</string>

    <string name="register">Register</string>
    <string name="login">Login</string>

    <string name="invalidEmail">Not a valid email address, please try again.</string>
    <string name="emailExists">This email is already registered, please go login or try a different one.</string>
    <string name="registerError">Register has failed, please check your internet and try again.</string>
    <string name="loginError">Login has failed, please check your internet and try again.</string>
    <string name="createProfileError">Failed to create your profile, please check your internet and try again.</string>
    <string name="emailPasswordMismatch">The email and password do not match any of our records.</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Profile Setting</item>
        <item >Signout</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/navigation_drawer_home_icon</item>
        <item>@drawable/navigation_drawer_profile_icon</item>
        <item>@drawable/navigation_drawer_signout_icon</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!-- Submit Schedule -->
    <string name="defaultStartNameHint">e.g. UCI Campus</string>
    <string name="defaultBackNameHint">e.g. Ranch 99 Market</string>
    <string name="defaultEditGoLocAddress">defaultEditGoLocAdress</string>
    <string name="defaultEditBackLocAddress">defaultEditGoLocAdress</string>
    <string name="startNameTitle">Start Place/Time</string>
    <string name="pickActualAddress">actual address</string>
    <string name="editScheduleActivity">Propose a schedule</string>
    <string name="backNameTitle">Return Place/Time</string>
    <string name="timeTitle">Time</string>
    <string name="dateTitle">Date</string>
    <string name="rangeTitle">Around</string>

    <string name="submitterRoleDriver">I\'ll Drive</string>
    <string name="submitterRolePassenger">Need Car Pool</string>
    <color name="text_color">#31D1F1</color>
    <color name="white">#ffffff</color>
</resources>
