<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:baselineAligned="false"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal"
    android:background="#FFFFFF" >

    <RelativeLayout
        android:layout_marginLeft="5dp"
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/strut"
            android:layout_marginTop="10dp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:scaleType="centerInside"
            android:src="@drawable/round_trip_icon"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/desc" />

        <LinearLayout
            android:id="@+id/layoutScheduleOverviewStart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/strut"
            android:layout_alignParentLeft="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewScheduleOverviewStartName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="left"
                android:text="@string/start_name" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:id="@+id/textViewScheduleOverviewStartTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_alignParentLeft="true"
                    android:gravity="left"
                    android:text="@string/start_time" />

                <ImageView
                    android:id="@+id/imageViewPlusMinusIconStart"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/textViewScheduleOverviewStartTime"
                    android:src="@drawable/plusminus_icon"
                    android:contentDescription="@string/desc" />

                <TextView
                    android:id="@+id/textViewScheduleOverviewStartTimeRange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_toRightOf="@id/imageViewPlusMinusIconStart"
                    android:gravity="center_vertical"
                    android:text="@string/start_time_range" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textViewScheduleOverviewStartTimeDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_time_date"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/textViewScheduleOverviewBack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/strut"
            android:layout_alignParentRight="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewScheduleOverviewBackName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_gravity="center_vertical|right"
                android:gravity="right"
                android:text="@string/back_name" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textViewScheduleOverviewBackTimeRange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center_vertical|right"
                    android:gravity="right"
                    android:text="@string/back_time_range" />

                <ImageView
                    android:id="@+id/imageViewPlusMinusIconBack"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/plusminus_icon"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/textViewScheduleOverviewBackTimeRange"
                    android:contentDescription="@string/desc"/>

                <TextView
	                android:id="@+id/textViewScheduleOverviewBackTime"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textSize="12sp"
	                android:layout_gravity="center_vertical|right"
	                android:gravity="right"
	                android:layout_toLeftOf="@id/imageViewPlusMinusIconBack"
	                android:text="@string/back_time" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textViewScheduleOverviewBackTimeDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_gravity="center_vertical|right"
                android:gravity="right"
                android:text="@string/back_time_date" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:scaleType="centerInside"
            android:src="@drawable/has_driver_icon"
            android:background="@null"
            android:contentDescription="@string/desc"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/status_okay_background"
            android:layout_gravity="center_horizontal"
            android:text="@string/seats_availability"/>
    </LinearLayout>
</LinearLayout>