<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_marginLeft="4dp"
                    android:text="@string/startNameTitle"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/editStartName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|bottom"
                    android:hint="@string/defaultStartNameHint"
                    android:inputType="text" />
            </LinearLayout>
            <ImageView
                android:id="@+id/mapIconStart"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerInside"
                android:layout_gravity="bottom"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="3dp"
                android:contentDescription="@string/desc"
                android:src="@drawable/map_icon" />
        </LinearLayout>

        <TextView
            android:id="@+id/startStreetAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="4dp"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/dateTitle"/>
                <Button
                    android:id="@+id/buttonEditStartTimeDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/timeTitle"/>
                <Button
                    android:id="@+id/buttonEditStartTimeHM"
                    android:onClick="onClickEditStartTimeHM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/rangeTitle"/>
                <Button
                    android:id="@+id/buttonEditStartTimeRange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_marginLeft="4dp"
                    android:text="@string/backNameTitle"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/editBackName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|bottom"
                    android:hint="@string/defaultBackNameHint"
                    android:inputType="text" />
            </LinearLayout>
            <ImageView
                android:id="@+id/mapIconBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerInside"
                android:layout_gravity="bottom"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="3dp"
                android:contentDescription="@string/desc"
                android:src="@drawable/map_icon" />
        </LinearLayout>

        <TextView
            android:id="@+id/backStreetAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="4dp"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/dateTitle"/>
                <Button
                    android:id="@+id/buttonEditBackTimeDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/timeTitle"/>
                <Button
                    android:id="@+id/buttonEditBackTimeHM"
                    android:onClick="onClickEditBackTimeHM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/rangeTitle"/>
                <Button
                    android:id="@+id/buttonEditBackTimeRange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
        </LinearLayout>
        <RadioGroup
            android:id="@+id/radioGroupSubmitterRole"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radioSubmitterRoleDriver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submitterRoleDriver" 
                android:checked="true" />

            <RadioButton
                android:id="@+id/radioSubmitterRolePassenger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submitterRolePassenger" />
        </RadioGroup>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>